# controllers/employees.js
@@ -1,5 +1,6 @@
 const mongodb = require('../data/database');
 const ObjectId = require('mongodb').ObjectId;
+const { check, validationResult } = require('express-validator')
 
 const getAll = async (req, res) => {
     //#swagger.tags=["Employees"]
@@ -59,31 +60,30 @@ const updateEmployee = async (req, res) => {
         position: req.body.position,
         team: req.body.team
     };
+    
+
     const response = await mongodb.getDatabase().db().collection('employees').replaceOne({_id: employeeId}, employee)
     if(response.modifiedCount > 0) {
         res.status(204).send();
     } else {
         res.status(500).json(response.error || 'Error occurred while updating employee')
     }
+
+   
+    
 }
 
 const deleteEmployee = async (req, res) => {
     //#swagger.tags=["Employees"]
     const employeeId = new ObjectId(req.params.id)
-    const employee = {
-        firstName: req.body.firstName,
-        lastName: req.body.lastName,
-        email: req.body.email,
-        birthday: req.body.birthday,
-        startDate: req.body.startDate,
-        wage: req.body.wage,
-        position: req.body.position,
-        team: req.body.team
-    };
+
     const response = await mongodb.getDatabase().db().collection('employees').deleteOne({_id: employeeId});
     if(response.deletedCount > 0) {
         res.status(204).send();
-    } else {
+    } else if (employeeId = null) {
+        res.status(500).json(response.error || 'No employeeId provided')
+    }
+    else {
         res.status(500).json(response.error || 'Error occurred while deleting employee')
     }
 }
