# routes/employees.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const routes = express.Router();
+const { userValidationRules, validate } = require('../validation.js')
 
 const employeeController = require('../controllers/employees');
 
@@ -7,8 +8,8 @@ routes.get('/', employeeController.getAll);
 
 routes.get('/:id', employeeController.getSingle);
 
-routes.post('/', employeeController.createEmployee);
-routes.put('/:id', employeeController.updateEmployee);
+routes.post('/', userValidationRules(), validate, employeeController.createEmployee);
+routes.put('/:id', userValidationRules(), validate, employeeController.updateEmployee);
 routes.delete('/:id', employeeController.deleteEmployee);
 
 module.exports = routes;
